# miyoo_square

./: CMakeLists.txt  README.md  run.ps1
libs/engine/: app.cpp  app.h  platform.h
libs/engine/app_logic/: app.cpp  app.h
libs/engine/asset/: asset.cpp  asset.h  asset_instance.h  asset_player.h  player_proto.txt
libs/engine/lang_state/: lang_state.cpp
libs/engine/platform/: platform.h
libs/engine/state_machine/: state_machine.cpp  state_machine.h
libs/game_logic/asset/: asset.cpp  asset.h  player_proto.txt
libs/game_logic/game_states/: game_states.cpp  game_states.h
libs/game_logic/game_states_logic/1.1.1_LEVEL_GAMEPLAY/: handle_event.h
libs/lang_state/: lang_state.h
libs/state_machine/: game_states.h  state_machine.cpp  state_machine.h
src/: main.cpp
